# URE

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/Models/: Monkey.dae  cube.dae  cubes.dae  cubes2.dae  globe.dae  house.dae  house2.dae  kltower.mtl  model.dae  model2.dae  model3.dae  untitled.dae
assets/Shaders/OpenGL3/: Default.frag  Default.vert  basic.frag  basic.vert
assets/Shaders/Vulkan/: ConvertToSPIRV.bat  Default.frag  Default.frag.spv  Default.vert  Default.vert.spv
include/: AnimatedModel.h  AnimationSystem.h  Animator.h  BitMask.h  Bounds.h  Camera.h  Component.h  ComponentManager.h  ContextManager.h  ContextManagerOpenGL3.h  ContextManagerVulkan.h  CullingResult.h  CullingSystem.h  Debug.h  DebugDraw.h  Emitter.h  Engine.h  Enums.h  Factory.h  FileInput.h  Frustum.h  Geometry.h  IDGenerator.h  Input.h  Light.h  LightingSystem.h  Material.h  MeshRenderer.h  MessagingSystem.h  Node.h  Object.h  ObjectCreationInfo.h  RenderableResource.h  Renderer.h  RendererOpenGL3.h  RendererVulkan.h  ShaderProgram.h  TextParser.h  Texture.h  TextureLoader.h  (+16 more)
src/: AnimatedModel.cpp  AnimationSystem.cpp  Animator.cpp  Bounds.cpp  Camera.cpp  Component.cpp  ComponentManager.cpp  ContextManager.cpp  ContextManagerOpenGL3.cpp  ContextManagerVulkan.cpp  CullingSystem.cpp  Debug.cpp  DebugDraw.cpp  Emitter.cpp  Engine.cpp  FileInput.cpp  Frustum.cpp  Geometry.cpp  Input.cpp  Light.cpp  LightingSystem.cpp  Material.cpp  MeshRenderer.cpp  MessagingSystem.cpp  Node.cpp  Object.cpp  RenderableResource.cpp  Renderer.cpp  RendererOpenGL3.cpp  RendererVulkan.cpp  ShaderProgram.cpp  TextParser.cpp  Texture.cpp  TextureLoaderDefault.cpp  Transformable.cpp  TypeInfo.cpp  VulkanCommandPool.cpp  VulkanDevice.cpp  VulkanPipeline.cpp  VulkanRenderPass.cpp  (+8 more)
